@@ -1,3 +1,7 @@
+2007-01-01  Kouhei Sutou  <kou@cozmixng.org>
+
+	* samples/text2.rb: used Pango::LayoutIter.
+
 2006-12-30  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_pattern.c: Cairo::GradientPattern#[]
